--- a/config.sample
+++ b/config.sample
@@ -8,3 +8,8 @@ version = v2.1
 secret = 
 # The organization account ID, which can be found via the `/accounts` endpoint.
 account-id = 
+
+[options]
+# Number of days without a login after which non-members get automatically
+# archived.
+archive-threshold = 60
